@@ -1,52 +1,0 @@
-<?php
-/**
-* Social Bookmarks
-*
-* System tool that allow's you to bookmark and share your interesting pageswith other people
-* Some parts of this tool is based on social_bookmarks module.
-*
-* @copyright	The ImpressCMS Project http://www.impresscms.org/
-* @license		http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License (GPL)
-* @package		core
-* @since		1.2
-* @author		Sina Asghari (AKA stranger) <stranger@impresscms.ir>
-* @author		Rene Sato (AKA sato-san) <www.impresscms.de>
-* @version		$Id$
-*/
-define('_MD_BOOKMARK_AT','Bookmark this page at');
-/* Be careful while editing or translating this file, everything bellow is made to give the translator
-   the option of adding their native or favorite sharing sites.
- * New links you make here won't be shown in other languages!
-*/
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.mister-wong.de/\" onClick=\"window.open('http://www.mister-wong.de/index.php?action=addurl&amp;bm_url='+encodeURIComponent(location.href)+'&amp;bm_notice=&amp;bm_description='+encodeURIComponent(document.title)+'&amp;bm_tags=');return false;\" title=\""._MD_BOOKMARK_AT.": Mr. Wong\" onMouseOver=\"bitte('wong','','".ICMS_URL."/modules/system/images/icons/wong_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/wong.gif\" alt=\""._MD_BOOKMARK_AT.": Mr. Wong\" name=\"wong\" border=\"0\" id=\"wong\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.webnews.de/\" onClick=\"window.open('http://www.webnews.de/einstellen?url='+encodeURIComponent(document.location)+'&amp;title='+encodeURIComponent(document.title));return false;\" title=\""._MD_BOOKMARK_AT.": Webnews\" onMouseOver=\"bitte('Webnews','','".ICMS_URL."/modules/system/images/icons/webnews_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/webnews.gif\" alt=\""._MD_BOOKMARK_AT.": Webnews\" name=\"Webnews\" border=\"0\" id=\"Webnews\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.icio.de/\" onClick=\"window.open('http://www.icio.de/add.php?url='+encodeURIComponent(location.href));return false;\" title=\""._MD_BOOKMARK_AT.": Icio\" onMouseOver=\"bitte('Icio','','".ICMS_URL."/modules/system/images/icons/icio_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/icio.gif\" alt=\""._MD_BOOKMARK_AT.": Icio\" name=\"Icio\" border=\"0\" id=\"Icio\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://beta.oneview.de/\" onClick=\"window.open('http://beta.oneview.de:80/quickadd/neu/addBookmark.jsf?URL='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title));return false;\" title=\""._MD_BOOKMARK_AT.": Oneview\" onMouseOver=\"bitte('Oneview','','".ICMS_URL."/modules/system/images/icons/oneview_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/oneview.gif\" alt=\""._MD_BOOKMARK_AT.": Oneview\" name=\"Oneview\" border=\"0\" id=\"Oneview\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.newsider.de/\" onClick=\"window.open('http://www.newsider.de/submit.php?url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title));return false;\" title=\""._MD_BOOKMARK_AT.": newsider\" onMouseOver=\"bitte('newsider','','".ICMS_URL."/modules/system/images/icons/newsider_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/newsider.gif\" alt=\""._MD_BOOKMARK_AT.": newsider\" name=\"newsider\" border=\"0\" id=\"newsider\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.folkd.com/\" onClick=\"window.open('http://www.folkd.com/submit/submit.php?url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title));return false;\" title=\""._MD_BOOKMARK_AT.": Folkd\" onMouseOver=\"bitte('Folkd','','".ICMS_URL."/modules/system/images/icons/folkd_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/folkd.gif\" alt=\""._MD_BOOKMARK_AT.": Folkd\" name=\"Folkd\" border=\"0\" id=\"Folkd\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://yigg.de/\" onClick=\"window.open('http://yigg.de/neu?exturl='+encodeURIComponent(location.href));return false\" title=\""._MD_BOOKMARK_AT.": Yigg\" onMouseOver=\"bitte('Yigg','','".ICMS_URL."/modules/system/images/icons/yigg_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/yigg.gif\" alt=\""._MD_BOOKMARK_AT.": Yigg\" name=\"Yigg\" border=\"0\" id=\"Yigg\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.linkarena.com/\" onClick=\"window.open('http://linkarena.com/bookmarks/addlink/?url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title)+'&amp;desc=&amp;tags=');return false;\" title=\""._MD_BOOKMARK_AT.": Linkarena\" onMouseOver=\"bitte('Linkarena','','".ICMS_URL."/modules/system/images/icons/linkarena_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/linkarena.gif\" alt=\""._MD_BOOKMARK_AT.": Linkarena\" name=\"Linkarena\" border=\"0\" id=\"Linkarena\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://digg.com/\" onClick=\"window.open('http://digg.com/submit?phase=2&amp;url='+encodeURIComponent(location.href)+'&amp;bodytext=&amp;tags=&amp;title='+encodeURIComponent(document.title));return false;\" title=\""._MD_BOOKMARK_AT.": Digg\" onMouseOver=\"bitte('Digg','','".ICMS_URL."/modules/system/images/icons/digg_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/digg.gif\" alt=\""._MD_BOOKMARK_AT.": Digg\" name=\"Digg\" border=\"0\" id=\"Digg\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://del.icio.us/\" onClick=\"window.open('http://del.icio.us/post?v=2&amp;url='+encodeURIComponent(location.href)+'&amp;notes=&amp;tags=&amp;title='+encodeURIComponent(document.title));return false;\" title=\""._MD_BOOKMARK_AT.": Del.icio.us\" onMouseOver=\"bitte('Delicious','','".ICMS_URL."/modules/system/images/icons/del_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/del.gif\" alt=\""._MD_BOOKMARK_AT.": Del.icio.us\" name=\"Delicious\" border=\"0\" id=\"Delicious\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://reddit.com/\" onClick=\"window.open('http://reddit.com/submit?url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title));return false;\" title=\""._MD_BOOKMARK_AT.": Reddit\" onMouseOver=\"bitte('Reddit','','".ICMS_URL."/modules/system/images/icons/reddit_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/reddit.gif\" alt=\""._MD_BOOKMARK_AT.": Reddit\" name=\"Reddit\" border=\"0\" id=\"Reddit\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.simpy.com/\" onClick=\"window.open('http://www.simpy.com/simpy/LinkAdd.do?title='+encodeURIComponent(document.title)+'&amp;tags=&amp;note=&amp;href='+encodeURIComponent(location.href));return false;\" title=\""._MD_BOOKMARK_AT.": Simpy\" onMouseOver=\"bitte('Simpy','','".ICMS_URL."/modules/system/images/icons/simpy_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/simpy.gif\" alt=\""._MD_BOOKMARK_AT.": Simpy\" name=\"Simpy\" border=\"0\" id=\"Simpy\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.stumbleupon.com/\" onClick=\"window.open('http://www.stumbleupon.com/submit?url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title));return false;\" title=\""._MD_BOOKMARK_AT.": StumbleUpon\" onMouseOver=\"bitte('StumbleUpon','','".ICMS_URL."/modules/system/images/icons/stumbleupon_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/stumbleupon.gif\" alt=\""._MD_BOOKMARK_AT.": StumbleUpon\" name=\"StumbleUpon\" border=\"0\" id=\"StumbleUpon\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://slashdot.org/\" onClick=\"window.open('http://slashdot.org/bookmark.pl?url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title));return false;\" title=\""._MD_BOOKMARK_AT.": Slashdot\" onMouseOver=\"bitte('Slashdot','','".ICMS_URL."/modules/system/images/icons/slashdot_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/slashdot.gif\" alt=\""._MD_BOOKMARK_AT.": Slashdot\" name=\"Slashdot\" border=\"0\" id=\"Slashdot\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.netscape.com/\" onClick=\"window.open('http://www.netscape.com/submit/?U='+encodeURIComponent(location.href)+'&amp;T='+encodeURIComponent(document.title));return false;\" title=\""._MD_BOOKMARK_AT.": Netscape\" onMouseOver=\"bitte('Netscape','','".ICMS_URL."/modules/system/images/icons/netscape_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/netscape.gif\" alt=\""._MD_BOOKMARK_AT.": Netscape\" name=\"Netscape\" border=\"0\" id=\"Netscape\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.furl.net/\" onClick=\"window.open('http://www.furl.net/storeIt.jsp?u='+encodeURIComponent(location.href)+'&amp;keywords=&amp;t='+encodeURIComponent(document.title));return false;\" title=\""._MD_BOOKMARK_AT.": Furl\" onMouseOver=\"bitte('Furl','','".ICMS_URL."/modules/system/images/icons/furl_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/furl.gif\" alt=\""._MD_BOOKMARK_AT.": Furl\" name=\"Furl\" border=\"0\" id=\"Furl\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.yahoo.com/\" onClick=\"window.open('http://myweb2.search.yahoo.com/myresults/bookmarklet?t='+encodeURIComponent(document.title)+'&amp;d=&amp;tag=&amp;u='+encodeURIComponent(location.href));return false;\" title=\""._MD_BOOKMARK_AT.": Yahoo\" onMouseOver=\"bitte('Yahoo','','".ICMS_URL."/modules/system/images/icons/yahoo_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/yahoo.gif\" alt=\""._MD_BOOKMARK_AT.": Yahoo\" name=\"Yahoo\" border=\"0\" id=\"Yahoo\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.spurl.net/\" onClick=\"window.open('http://www.spurl.net/spurl.php?v=3&amp;tags=&amp;title='+encodeURIComponent(document.title)+'&amp;url='+encodeURIComponent(document.location.href));return false;\" title=\""._MD_BOOKMARK_AT.": Spurl\" onMouseOver=\"bitte('Spurl','','".ICMS_URL."/modules/system/images/icons/spurl_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/spurl.gif\" alt=\""._MD_BOOKMARK_AT.": Spurl\" name=\"Spurl\" border=\"0\" id=\"Spurl\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.google.com/\" onClick=\"window.open('http://www.google.com/bookmarks/mark?op=add&amp;hl="._LANGCODE."&amp;bkmk='+encodeURIComponent(location.href)+'&amp;annotation=&amp;labels=&amp;title='+encodeURIComponent(document.title));return false;\" title=\""._MD_BOOKMARK_AT.": Google\" onMouseOver=\"bitte('Google','','".ICMS_URL."/modules/system/images/icons/google_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/google.gif\" alt=\""._MD_BOOKMARK_AT.": Google\" name=\"Google\" border=\"0\" id=\"Google\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.blinklist.com/\" onClick=\"window.open('http://www.blinklist.com/index.php?Action=Blink/addblink.php&amp;Description=&amp;Tag=&amp;Url='+encodeURIComponent(location.href)+'&amp;Title='+encodeURIComponent(document.title));return false;\" title=\""._MD_BOOKMARK_AT.": Blinklist\" onMouseOver=\"bitte('Blinklist','','".ICMS_URL."/modules/system/images/icons/blinklist_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/blinklist.gif\" alt=\""._MD_BOOKMARK_AT.": Blinklist\" name=\"Blinklist\" border=\"0\" id=\"Blinklist\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://blogmarks.net/\" onClick=\"window.open('http://blogmarks.net/my/new.php?mini=1&amp;simple=1&amp;url='+encodeURIComponent(location.href)+'&amp;content=&amp;public-tags=&amp;title='+encodeURIComponent(document.title));return false;\" title=\""._MD_BOOKMARK_AT.": Blogmarks\" onMouseOver=\"bitte('Blogmarks','','".ICMS_URL."/modules/system/images/icons/blogmarks_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/blogmarks.gif\" alt=\""._MD_BOOKMARK_AT.": Blogmarks\" name=\"Blogmarks\" border=\"0\" id=\"Blogmarks\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.diigo.com/\" onClick=\"window.open('http://www.diigo.com/post?url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title)+'&amp;tag=&amp;comments='); return false;\" title=\""._MD_BOOKMARK_AT.": Diigo\" onMouseOver=\"bitte('Diigo','','".ICMS_URL."/modules/system/images/icons/diigo_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/diigo.gif\" alt=\""._MD_BOOKMARK_AT.": Diigo\" name=\"Diigo\" border=\"0\" id=\"Diigo\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.technorati.com/\" onClick=\"window.open('http://technorati.com/faves?add='+encodeURIComponent(location.href)+'&amp;tag=');return false;\" title=\""._MD_BOOKMARK_AT.": Technorati\" onMouseOver=\"bitte('Technorati','','".ICMS_URL."/modules/system/images/icons/technorati_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/technorati.gif\" alt=\""._MD_BOOKMARK_AT.": Technorati\" name=\"Technorati\" border=\"0\" id=\"Technorati\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.newsvine.com/\" onClick=\"window.open('http://www.newsvine.com/_wine/save?popoff=1&amp;u='+encodeURIComponent(location.href)+'&amp;tags=&amp;blurb='+encodeURIComponent(document.title));return false;\" title=\""._MD_BOOKMARK_AT.": Newsvine\" onMouseOver=\"bitte('Newsvine','','".ICMS_URL."/modules/system/images/icons/newsvine_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/newsvine.gif\" alt=\""._MD_BOOKMARK_AT.": Newsvine\" name=\"Newsvine\" border=\"0\" id=\"Newsvine\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.blinkbits.com/\" onClick=\"window.open('http://www.blinkbits.com/bookmarklets/save.php?v=1&amp;title='+encodeURIComponent(document.title)+'&amp;source_url='+encodeURIComponent(location.href)+'&amp;source_image_url=&amp;rss_feed_url=&amp;rss_feed_url=&amp;rss2member=&amp;body=');return false;\" title=\""._MD_BOOKMARK_AT.": Blinkbits\" onMouseOver=\"bitte('Blinkbits','','".ICMS_URL."/modules/system/images/icons/blinkbits_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/blinkbits.gif\" alt=\""._MD_BOOKMARK_AT.": Blinkbits\" name=\"Blinkbits\" border=\"0\" id=\"Blinkbits\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://ma.gnolia.com/\" onClick=\"window.open('http://ma.gnolia.com/bookmarklet/add?url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title)+'&amp;description=&amp;tags=');return false;\" title=\""._MD_BOOKMARK_AT.": Ma.Gnolia\" onMouseOver=\"bitte('MaGnolia','','".ICMS_URL."/modules/system/images/icons/ma.gnolia_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/ma.gnolia.gif\" alt=\""._MD_BOOKMARK_AT.": Ma.Gnolia\" name=\"MaGnolia\" border=\"0\" id=\"MaGnolia\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://smarking.com/\" onClick=\"window.open('http://smarking.com/editbookmark/?url='+ location.href +'&amp;description=&amp;tags=');return false;\" title=\""._MD_BOOKMARK_AT.": Smarking\" onMouseOver=\"bitte('Smarking','','".ICMS_URL."/modules/system/images/icons/smarking_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/smarking.gif\" alt=\""._MD_BOOKMARK_AT.": Smarking\" name=\"Smarking\" border=\"0\" id=\"Smarking\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.netvouz.com/\" onClick=\"window.open('http://www.netvouz.com/action/submitBookmark?url='+encodeURIComponent(location.href)+'&amp;description=&amp;tags=&amp;title='+encodeURIComponent(document.title)+'&amp;popup=yes');return false;\" title=\""._MD_BOOKMARK_AT.": Netvouz\" onMouseOver=\"bitte('Netvouz','','".ICMS_URL."/modules/system/images/icons/netvouz_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/netvouz.gif\" alt=\""._MD_BOOKMARK_AT.": Netvouz\" name=\"Netvouz\" border=\"0\" id=\"Netvouz\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.facebook.com/\" onClick=\"window.open('http://www.facebook.com/sharer.php?u='+encodeURIComponent(location.href)+'&amp;description=&amp;tags=&amp;title='+encodeURIComponent(document.title)+'&amp;popup=yes');return false;\" title=\""._MD_BOOKMARK_AT.": Facebook\" onMouseOver=\"bitte('Facebook','','".ICMS_URL."/modules/system/images/icons/facebook_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/facebook.gif\" alt=\""._MD_BOOKMARK_AT.": Facebook\" name=\"Facebook\" border=\"0\" id=\"Facebook\" /> </a>";
-  $bookmark .= "<a rel=\"nofollow\" style=\"text-decoration:none;\" href=\"http://www.ask.com/\" onClick=\"window.open('http://myjeeves.ask.com/mysearch/BookmarkIt?v=1.2&t=webpages&url='+encodeURIComponent(location.href)+'&amp;description=&amp;tags=&amp;title='+encodeURIComponent(document.title)+'&amp;popup=yes');return false;\" title=\""._MD_BOOKMARK_AT.": Ask\" onMouseOver=\"bitte('Ask','','".ICMS_URL."/modules/system/images/icons/ask_be.gif',1)\" onMouseOut=\"genau()\" > <img style=\"padding-bottom:1px;\" src=\"".ICMS_URL."/modules/system/images/icons/ask.gif\" alt=\""._MD_BOOKMARK_AT.": Ask\" name=\"Ask\" border=\"0\" id=\"Ask\" /> </a>";
-
-?>
