@@ -21,6 +21,9 @@
 	<meta name="author" content="<{$xoops_meta_author}>" />
 	<meta name="copyright" content="<{$xoops_meta_copyright}>" />
 	<meta name="generator" content="ImpressCMS" />
+
+<!-- Module Header -->
+<{$xoops_module_header}>
 	
 <!-- Favicon -->
 	<link rel="shortcut icon" type="image/ico" href="<{xoImgUrl icons/favicon.ico}>" />
@@ -35,9 +38,6 @@
 	<link rel="alternate stylesheet" type="text/css" media="all" title="sunset" href="<{$icms_imageurl}>/<{if $icms_rtl}>rtl/<{/if}>sunset.css" />
 <!-- Scripts -->
 	<script src="<{$xoops_imageurl}>scripts/styleswitcher.js" type="text/javascript"></script>
-
-<!-- Module Header -->
-<{$xoops_module_header}>
 </head>
 
 <body id="<{$xoops_dirname}>" class="<{$xoops_langcode}>">
