@@ -22,14 +22,15 @@
 	<meta name="copyright" content="<{$icms_meta_copyright}>" />
 	<meta name="generator" content="ImpressCMS" />
 
+<!-- Module Header -->
+<{$icms_module_header}>
+
 <!-- Favicon -->
 	<link rel="shortcut icon" type="image/ico" href="<{xoImgUrl icons/favicon.ico}>" />
 	<link rel="icon" type="image/png" href="<{xoImgUrl icons/icon.png}>" />
 
 <!-- Sheet Css -->
 	<link rel="stylesheet" type="text/css" media="all" title="Style sheet" href="<{$icms_imageurl}>/<{if $icms_rtl}>rtl/<{/if}>style.css" />
-<!-- Module Header -->
-<{$icms_module_header}>
 </head>
 
 <body id="<{$icms_dirname}>" class="<{$icms_langcode}>">
