@@ -21,6 +21,9 @@
 	<meta name="author" content="<{$xoops_meta_author}>" />
 	<meta name="copyright" content="<{$xoops_meta_copyright}>" />
 	<meta name="generator" content="ImpressCMS" />
+
+<!-- Module Header -->
+<{$xoops_module_header}>
 	
 <!-- Favicon -->
 	<link rel="shortcut icon" type="image/ico" href="<{xoImgUrl icons/favicon.ico}>" />
@@ -28,8 +31,6 @@
 	
 <!-- Sheet Css -->
 	<link rel="stylesheet" type="text/css" media="all" title="Style sheet" href="<{$icms_imageurl}>/<{if $icms_rtl}>rtl/<{/if}>style.css" />
-<!-- Module Header -->
-<{$xoops_module_header}>
 </head>
 
 <body id="<{$xoops_dirname}>" class="<{$xoops_langcode}>">
